--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,12 @@
     <string name="add">Add</string>
     <string name="km">km</string>
     <string name="records">Records</string>
+    <string name="inside">inside</string>
+    <string name="average">average</string>
+    <string-array name="spinner">
+        <item>Inside</item>
+        <item>Average</item>
+        <item>Outside</item>
+    </string-array>
+    <string name="outside">outside</string>
 </resources>
