good start an the main activity, working record addition

--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -7,4 +7,7 @@
     <string name="total">Totaal...</string>
     <string name="km">km</string>
     <string name="records">Ritten</string>
+    <string name="outside">Buiten</string>
+    <string name="average">Gemiddeld</string>
+    <string name="inside">Binnen</string>
 </resources>
