--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,34 @@
     <string name="title_activity_modify_record">ModifyRecordActivity</string>
     <string name="update">Update</string>
     <string name="delete">delete</string>
+
+
+    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
+    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
+
+    <!--Titles-->
+    <string name="title_lists">My Lists</string>
+    <string name="title_friends">Friends</string>
+    <string name="title_suggestions">Suggestions</string>
+    <string name="title_bugs">Bugs</string>
+    <string name="title_settings">Settings</string>
+    <string name="title_my_profile">My Profile</string>
+    <string name="title_products">My Products</string>
+
+    <!--Navigation drawer-->
+    <string name="nav_drawer_home">Home</string>
+    <string name="nav_drawer_logout">Logout</string>
+    <string name="nav_drawer_group_communication">Communication</string>
+
+    <!--Placeholders for preview developing purposes-->
+    <string name="placeholder_name" translatable="false">Hank Hankinson</string>
+    <string name="placeholder_title" translatable="false">Beautiful Title</string>
+    <string name="placeholder_text" translatable="false">Text</string>
+    <string name="placeholder_email" translatable="false">mail@mail.com</string>
+    <string name="placeholder_number" translatable="false">25</string>
+    <string name="placeholder_decimal" translatable="false">12.00</string>
+    <string name="placeholder_date" translatable="false">15–03–2015</string>
+    <string name="placeholder_desc" translatable="false">This is a description.</string>
+    <string name="placeholder_paragraph" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec varius nisi, a mattis erat. Etiam sit amet orci et risus imperdiet vehicula vitae in sapien. Donec a tellus a odio laoreet elementum. Ut tempor sem ac viverra volutpat. Pellentesque efficitur, ipsum a suscipit elementum, leo ipsum aliquet dui, sit amet accumsan diam arcu et velit</string>
+
 </resources>
