--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,18 +23,16 @@
     <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
 
     <!--Titles-->
-    <string name="title_lists">My Lists</string>
-    <string name="title_friends">Friends</string>
-    <string name="title_suggestions">Suggestions</string>
-    <string name="title_bugs">Bugs</string>
+    <string name="title_all_records">All Records</string>
+    <string name="title_bill">Bill</string>
+    <string name="title_payment">Payment</string>
+    <string name="title_my_records">My Records</string>
     <string name="title_settings">Settings</string>
-    <string name="title_my_profile">My Profile</string>
-    <string name="title_products">My Products</string>
 
     <!--Navigation drawer-->
     <string name="nav_drawer_home">Home</string>
     <string name="nav_drawer_logout">Logout</string>
-    <string name="nav_drawer_group_communication">Communication</string>
+    <string name="nav_drawer_group_functions">Functions</string>
 
     <!--Placeholders for preview developing purposes-->
     <string name="placeholder_name" translatable="false">Hank Hankinson</string>
@@ -46,5 +44,6 @@
     <string name="placeholder_date" translatable="false">15–03–2015</string>
     <string name="placeholder_desc" translatable="false">This is a description.</string>
     <string name="placeholder_paragraph" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec varius nisi, a mattis erat. Etiam sit amet orci et risus imperdiet vehicula vitae in sapien. Donec a tellus a odio laoreet elementum. Ut tempor sem ac viverra volutpat. Pellentesque efficitur, ipsum a suscipit elementum, leo ipsum aliquet dui, sit amet accumsan diam arcu et velit</string>
+
 
 </resources>
