--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -21,4 +21,11 @@
     <string name="nav_drawer_home">Home</string>
     <string name="nav_drawer_group_functions">Functies</string>
     <string name="delete">Verwijderen</string>
+    <string name="save">Opslaan</string>
+    <string name="total_title">Totaal</string>
+
+    <string name="tv_liter_for_km_average">Hoeveel liter kost gemiddeld het om 1 km te rijden?</string>
+    <string name="tv_liter_for_km_inside">Hoeveel liter kost het om 1 km te rijden in de bebouwde kom?</string>
+    <string name="tv_liter_for_km_outside">Hoeveel liter kost het om 1 km te rijden buiten de bebouwde kom?</string>
+    <string name="tv_price_for_liter">Hoeveel kost 1 liter?</string>
 </resources>
